# iqtree2_serialization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: DockerFile  README.md  devcontainer.json
JSON/: CMakeLists.txt  generate_random_tree.cpp  iqtree2core_init.h  params.cpp  params.h
alignment/: CMakeLists.txt
core/: README.md  call.py  core.cpp  core.dylib  core.h  generate_random_tree.cpp  generate_random_tree.h  generate_random_tree_bindings.cpp  iqtree2core_init.cpp  iqtree2core_init.h  params.cpp  params_bindings.cpp  version.cpp  version.h  version_bindings.cpp
docker/: DockerFile  README.md  entrypoint.sh
libiqtree2/: README.md
libiqtree2/include/: libiqtree2_functions.h
libiqtree2/libs/: test_python.py
libiqtree2/src/: libiqtree2_binding.cpp  libiqtree2_functions.cpp
libiqtree2/src/functions/: calculate_RF_distance.cpp  generate_random_tree.cpp  phygenic_analysis.cpp  version.cpp
libiqtree2/tests/: CMakeLists.txt
libiqtree2/tests/c++/src/: main.cpp  test_calculate_RF_distance.cpp  test_generate_random_tree.cpp  test_phylogenetic_analysis.cpp  test_phylogenic_analysis.cpp  test_version.cpp
libiqtree2/tests/python/: test_calculate_RF_distance.py  test_generate_radom_tree.py  test_phylogenetic_analysis.py  test_phylogenic_analysis.py  test_version.py
main/: CMakeLists.txt  libiqtree2_fun.cpp  libiqtree2_fun.h  main.cpp  suppFunc.h
nclextra/: myreader.h
piqtree2/: README.md  nm.txt  param_list.txt  piqtree2.ipynb  setup.py
piqtree2/.ipynb_checkpoints/: piqtree2-checkpoint.ipynb
piqtree2/libs/: libiqtree2_version.py  test_iqtree2core_connectivity.py
piqtree2/piqtree2/: __init__.py  params.py  version.py
piqtree2/piqtree2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
piqtree2/sample/: CMakeLists.txt  call.py
piqtree2/tests/: test_iqtree2core_params.py  test_iqtree2core_version.py  test_piqtree2_params.py  test_piqtree2_version.py
pyIQTREE2/: CMakeLists.txt  README.md  __init__.py  generateRandomTree.cpp  generateRandomTree.h  pyIQTREE2.cpp  pyutils.cpp  pyutils.h  setup.py  test_pyIQTREE2.py
pyqtest2/: README.md
tree/: mtree.cpp  mtree.h
utils/: CMakeLists.txt  tools.cpp  tools.h
